# LineaCore

./: .gitignore  .gitmodules  CMakeLists.txt
examples/LandXMLFiles/: M3C_TRACE_PROFIL_REFERENCE_v01.01.xml  TAE_Centre_01_01.xml  TAE_Centre_01_01_Rail.xml  TAE_Centre_01_01_Test.xml  Toutes les voies et Surfaces.xml  v1.xml
include/LineaCore/Geometry/: GeometryUtils.hpp  Point2D.hpp  Vector2D.hpp
include/LineaCore/Geometry/Alignments/Horizontal/: ClotoideTransition.hpp  CurvedAlignment.hpp  HorizontalAlignment.hpp  StraightAlignment.hpp  TransitionAlignment.hpp
include/LineaCore/LandXML/: LandXMLSerializable.hpp  XMLUtils.hpp
src/Geometry/: GeometryUtils.cpp  Point2D.cpp  Vector2D.cpp
src/Geometry/Alignments/Horizontal/: ClotoideTransition.cpp  CurvedAlignment.cpp  HorizontalAlignment.cpp  StraightAlignment.cpp  TransitionAlignment.cpp
src/LandXML/: XMLUtils.cpp
tests/Alignments/Horizontal/: CurvedAlignmentTest.cpp  StraightAlignmentTest.cpp
tests/Geometry/: GeometryUtilsTest.cpp  TestPoint2D.cpp  TestVector2D.cpp  Vector2DTest.cpp
tests/LandXML/: XMLUtilsTest.cpp
